add_subdirectory(external)
add_subdirectory(tools)
add_subdirectory(framework)
add_subdirectory(operators)
if(MPAS_CORE STREQUAL "atmosphere")
    add_subdirectory(core_atmosphere)
endif()
if(MPAS_CORE STREQUAL "init_atmosphere")
    add_subdirectory(core_init_atmosphere)
endif()
add_subdirectory(driver)
